# ros-bridge

./: .gitignore  .gitmodules  .pylintrc  .readthedocs.yml  .travis.yml  CHANGELOG.md  CMakeLists.txt  CreateROSbridgeDebian.sh  LICENSE  Makefile  README.apollo.md  README.md  README.ros.md  README.ros2.md  Readme.md  carla_ros_bridge.rdmanifest  check.sh  client.launch  client_with_rqt.launch  install_dependencies.sh  mkdocs.yml  package.xml  requirements.txt
Python/: config.py  (+3 more)
carla_abf_demo/: CMakeLists.txt  README.md  package.xml
carla_abf_demo/config/: ABFScenario.xosc  abf_demo_config.rviz
carla_abf_demo/launch/: carla_abf_demo.launch.py
carla_ackermann_control/: CMakeLists.txt  README.md  check.sh  package.xml  settings.yaml  setup.cfg  setup.py
carla_ackermann_control/config/: AckermannControl.perspective  AckermannPlot.perspective  EgoVehicleControlParameter.cfg  settings.ros1.yaml  settings.yaml
carla_ackermann_control/launch/: carla_ackermann_control.launch  carla_ackermann_control.launch.py  carla_ros_bridge_with_ackermann_control.launch  carla_ros_bridge_with_ackermann_control.launch.py
carla_ackermann_control/msg/: EgoVehicleControlCurrent.msg  EgoVehicleControlInfo.msg  EgoVehicleControlMaxima.msg  EgoVehicleControlStatus.msg  EgoVehicleControlTarget.msg
carla_ackermann_control/src/: carla_ackermann_control  carla_ackermann_control_node.py  carla_control_physics.py
carla_ackermann_control/src/carla_ackermann_control/: carla_ackermann_control_node.py  carla_control_physics.py
carla_ackermann_msgs/: CMakeLists.txt  package.xml
carla_ackermann_msgs/msg/: EgoVehicleControlCurrent.msg  EgoVehicleControlInfo.msg  EgoVehicleControlStatus.msg
carla_actor_state_publisher/: CMakeLists.txt  README.md  package.xml  setup.cfg  setup.py
carla_actor_state_publisher/launch/: carla_ego_publisher.launch.py  carla_ego_state_publisher.launch
carla_actor_state_types/: CMakeLists.txt  package.xml
carla_actor_state_types/msg/: CarlaActorState.msg
carla_actor_state_types/srv/: GetActorState.srv
carla_ad_agent/: CMakeLists.txt  README.md  package.xml  setup.cfg  setup.py
carla_ad_agent/launch/: carla_ad_agent.launch  carla_ad_agent.launch.py
carla_ad_demo/: CMakeLists.txt  README.md  package.xml  setup.py
carla_ad_demo/config/: FollowLeadingVehicle.xosc  RevealScenario.xosc  carla_ad_demo.rviz  carla_ad_demo_ros2.rviz  example_scenarios.json  sensors.json
carla_ad_demo/launch/: carla_ad_demo.launch  carla_ad_demo.launch.py  carla_ad_demo_with_rviz.launch  carla_ad_demo_with_scenario.launch  carla_ad_demo_with_scenario.launch.py
carla_common/: CMakeLists.txt  package.xml  setup.cfg  setup.py
carla_ego_vehicle/: CMakeLists.txt  README.md  package.xml  setup.cfg  setup.py
carla_ego_vehicle/config/: sensors.json  settings.yaml
carla_ego_vehicle/launch/: carla_ego_vehicle.launch  carla_ego_vehicle.launch.py  carla_example_ego_vehicle.launch  carla_example_ego_vehicle.launch.py  carla_ros_manual_control.launch
carla_infrastructure/: CMakeLists.txt  README.md  package.xml  setup.cfg  setup.py
carla_infrastructure/config/: sensors.json
carla_infrastructure/launch/: carla_infrastructure.launch  carla_infrastructure.launch.py
carla_manual_control/: CMakeLists.txt  README.md  package.xml  setup.cfg  setup.py
carla_manual_control/launch/: carla_manual_control.launch  carla_manual_control.launch.py
carla_ros_bridge/: CMakeLists.txt  check.sh  package.xml  setup.cfg  setup.py
carla_ros_bridge/config/: carla_default_rviz.cfg.rviz  carla_default_rviz2.cfg.rviz  settings.yaml  settings_challenge.yaml
carla_ros_bridge/launch/: carla_ros_bridge.launch  carla_ros_bridge.launch.py  carla_ros_bridge_with_example_ego_vehicle.launch  carla_ros_bridge_with_example_ego_vehicle.launch.py  carla_ros_bridge_with_rviz.launch  carla_ros_bridge_with_rviz.launch.py  challenge.launch
carla_ros_bridge/msg/: CarlaCollisionEvent.msg  CarlaEgoVehicleInfo.msg  CarlaEgoVehicleInfoWheel.msg  CarlaEgoVehicleStatus.msg  CarlaLaneInvasionEvent.msg
carla_ros_bridge/test/: ros_bridge_client.py  ros_bridge_client.test  ros_bridge_client_ros2_test.py  test_infrastructure_sensors.json  test_objects.json  test_sensors.json
carla_ros_bridge_lifecycle/: CMakeLists.txt  package.xml
carla_ros_bridge_lifecycle/launch/: challenge.launch
carla_ros_scenario_runner/: CMakeLists.txt  README.md  package.xml  setup.cfg  setup.py
carla_ros_scenario_runner/config/: FollowLeadingVehicleSample.xml  example_scenarios.json  follow_leading_vehicle_sample.py
carla_ros_scenario_runner/launch/: carla_ros_scenario_runner.launch  carla_ros_scenario_runner.launch.py
carla_ros_scenario_runner_types/: CMakeLists.txt  package.xml
carla_ros_scenario_runner_types/msg/: CarlaScenario.msg  CarlaScenarioList.msg  CarlaScenarioRunnerStatus.msg
carla_ros_scenario_runner_types/srv/: ExecuteScenario.srv
carla_spawn_actors/: CMakeLists.txt  README.md  package.xml  setup.py
carla_spawn_actors/config/: actors.json
carla_spawn_actors/launch/: carla_example_ego_vehicle.launch  carla_spawn_actors.launch  set_initial_pose.launch
carla_spawn_objects/: CMakeLists.txt  README.md  package.xml  setup.cfg  setup.py
carla_spawn_objects/config/: charger.json  ego.json  ego64.json  ego_cam.json  mobile_system.json  npc.json  object_sensor_only.json  objects.json
carla_spawn_objects/launch/: carla_example_ego_vehicle.launch  carla_example_ego_vehicle.launch.py  carla_spawn_objects.launch  carla_spawn_objects.launch.py  set_initial_pose.launch  set_initial_pose.launch.py
carla_spectator_camera/: CMakeLists.txt  README.md  package.xml  setup.cfg  setup.py
carla_spectator_camera/launch/: carla_spectator_camera.launch  carla_spectator_camera.launch.py
carla_twist_to_control/: CMakeLists.txt  README.md  package.xml  setup.cfg  setup.py
carla_twist_to_control/launch/: carla_twist_to_control.launch  carla_twist_to_control.launch.py
carla_walker_agent/: CMakeLists.txt  README.md  package.xml  setup.cfg  setup.py
carla_walker_agent/launch/: carla_walker_agent.launch  carla_walker_agent.launch.py
(+295 files in other folders)
