<?xml version="1.0"?>
<package format="3">
  <name>carla_abf_demo</name>
  <version>0.0.1</version>
  <description>The carla_abf_demo package</description>
  <maintainer email="ttgamage@siue.edu"> Thoshitha Gamage</maintainer>
  <license>MIT</license>

  
  <exec_depend>carla_ros_bridge</exec_depend>
  <exec_depend>carla_spawn_objects</exec_depend>
  <exec_depend>carla_waypoint_publisher</exec_depend>
  <exec_depend>carla_ad_agent</exec_depend>
  <exec_depend>carla_manual_control</exec_depend>
  <exec_depend>rviz_carla_plugin</exec_depend>
  <exec_depend>carla_twist_to_control</exec_depend>
  <exec_depend>carla_ros_scenario_runner</exec_depend>

  <buildtool_depend condition="$ROS_VERSION == 2">ament_python</buildtool_depend>
  <exec_depend condition="$ROS_VERSION == 2">rviz2</exec_depend>

  <export>
    <build_type condition="$ROS_VERSION == 2">ament_cmake</build_type>
  </export>
</package>
