<?xml version="1.0"?>
<package format="2">
  <name>carla_ackermann_control</name>
  <version>0.0.0</version>
  <description>The carla_ackermann_control package</description>
  <maintainer email="carla.simulator@gmail.com">CARLA Simulator Team</maintainer>
  <license>MIT</license>
  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>rospy</build_depend>
  <build_depend>carla_msgs</build_depend>
  <build_depend>roslaunch</build_depend>
  <build_export_depend>rospy</build_export_depend>
  <exec_depend>rospy</exec_depend>
  <exec_depend>ackermann_msgs</exec_depend>
  <exec_depend>carla_ros_bridge</exec_depend>
  <exec_depend>std_msgs</exec_depend>
  <exec_depend>dynamic_reconfigure</exec_depend>
  <exec_depend>carla_msgs</exec_depend>
  <export>
  </export>
</package>
