<?xml version="1.0"?>
<package format="2">
  <name>carla_infrastructure</name>
  <version>0.0.0</version>
  <description>The carla_infrastructure package</description>
  <maintainer email="carla.simulator@gmail.com">CARLA Simulator Team</maintainer>
  <license>MIT</license>
  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>rospy</build_depend>
  <build_depend>roslaunch</build_depend>
  <build_export_depend>rospy</build_export_depend>
  <exec_depend>rospy</exec_depend>
  <export>
  </export>
</package>
