<?xml version="1.0"?>
<package format="3">
  <name>carla_manual_control</name>
  <version>0.0.0</version>
  <description>The carla_manual_control package</description>
  <maintainer email="carla.simulator@gmail.com">CARLA Simulator Team</maintainer>
  <license>MIT</license>

  <exec_depend>carla_msgs</exec_depend>
  <exec_depend>sensor_msgs</exec_depend>
  <exec_depend>std_msgs</exec_depend>
  <exec_depend>ros_compatibility</exec_depend>

  <!-- ROS 2 DEPENDENCIES-->
  <depend condition="$ROS_VERSION == 2">rclpy</depend>
  <exec_depend condition="$ROS_VERSION == 2">tf2_ros</exec_depend>

  <!-- ROS 1 DEPENDENCIES-->
  <buildtool_depend condition="$ROS_VERSION == 1">catkin</buildtool_depend>
  <build_depend condition="$ROS_VERSION == 1">rospy</build_depend>
  <build_depend condition="$ROS_VERSION == 1">roslaunch</build_depend>
  <build_export_depend condition="$ROS_VERSION == 1">rospy</build_export_depend>
  <exec_depend condition="$ROS_VERSION == 1">rospy</exec_depend>
  <exec_depend condition="$ROS_VERSION == 1">tf</exec_depend>


  <export>
    <build_type condition="$ROS_VERSION == 1">catkin</build_type>
    <build_type condition="$ROS_VERSION == 2">ament_python</build_type>
  </export>
</package>
