<?xml version="1.0"?>
<package format="2">
  <name>carla_ros_bridge</name>
  <version>0.0.1</version>
  <description>The carla_ros_bridge package</description>
  <maintainer email="carla.simulator@gmail.com">CARLA Simulator Team</maintainer>
  <license>MIT</license>
  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>roslaunch</build_depend>
  <exec_depend>rospy</exec_depend>
  <exec_depend>carla_common</exec_depend>
  <exec_depend>sensor_msgs</exec_depend>
  <exec_depend>visualization_msgs</exec_depend>
  <exec_depend>tf</exec_depend>
  <exec_depend>tf2</exec_depend>
  <exec_depend>rviz</exec_depend>
  <exec_depend>cv_bridge</exec_depend>
  <exec_depend>geometry_msgs</exec_depend>
  <exec_depend>std_msgs</exec_depend>
  <exec_depend>rosbag_storage</exec_depend>
  <exec_depend>derived_object_msgs</exec_depend>
  <exec_depend>shape_msgs</exec_depend>
  <exec_depend>nav_msgs</exec_depend>
  <exec_depend>tf2_msgs</exec_depend>
  <exec_depend>rosgraph_msgs</exec_depend>
  <exec_depend>cv_bridge</exec_depend>
  <exec_depend>carla_msgs</exec_depend>
  <exec_depend>carla_ego_vehicle</exec_depend>
  <exec_depend>carla_manual_control</exec_depend>
  <export>
  </export>
</package>
