<?xml version="1.0"?>
<package format="2">
  <name>carla_ros_bridge_lifecycle</name>
  <version>0.0.1</version>
  <description>The carla_ros_bridge_lifecycle package</description>
  <maintainer email="carla.simulator@gmail.com">CARLA Simulator Team</maintainer>
  <license>MIT</license>
  <buildtool_depend>catkin</buildtool_depend>
  <exec_depend>rospy</exec_depend>
  <export>
  </export>
</package>
