<?xml version="1.0"?>
<package format="2">
  <name>carla_ros_scenario_runner</name>
  <version>0.0.0</version>
  <description>The carla_ros_scenario_runner package</description>
  <maintainer email="carla.simulator@gmail.com">CARLA Simulator Team</maintainer>
  <license>MIT</license>
  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>rospy</build_depend>
  <build_depend>roslaunch</build_depend>
  <build_export_depend>rospy</build_export_depend>
  <exec_depend>rospy</exec_depend>
  <exec_depend>carla_msgs</exec_depend>
  <exec_depend>carla_ros_scenario_runner_types</exec_depend>
  <exec_depend>std_msgs</exec_depend>
  <exec_depend>carla_common</exec_depend>

  <export>
  </export>
</package>
