<?xml version="1.0"?>
<package format="2">
  <name>carla_ros_scenario_runner_types</name>
  <version>0.1.0</version>
  <description>The carla_ros_scenario_runner_types package</description>
  <maintainer email="carla.simulator@gmail.com">CARLA Simulator Team</maintainer>
  <license>MIT</license>
  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>message_generation</build_depend>
  <build_depend>geometry_msgs</build_depend>
  <exec_depend>message_runtime</exec_depend>
  <exec_depend>geometry_msgs</exec_depend>
</package>

