<?xml version="1.0"?>
<package format="3">
  <name>carla_ros_scenario_runner_types</name>
  <version>0.1.0</version>
  <description>The carla_ros_scenario_runner_types package</description>
  <maintainer email="carla.simulator@gmail.com">CARLA Simulator Team</maintainer>
  <license>MIT</license>

  <buildtool_depend condition="$ROS_VERSION == 1">catkin</buildtool_depend>
  <buildtool_depend condition="$ROS_VERSION == 2">ament_cmake</buildtool_depend>

  <build_depend condition="$ROS_VERSION == 1">message_generation</build_depend>
  <build_depend condition="$ROS_VERSION == 2">rosidl_default_generators</build_depend>
  <build_depend>ros_environment</build_depend>
  <build_depend>geometry_msgs</build_depend>

  <depend condition="$ROS_VERSION == 2">builtin_interfaces</depend>
  
  <exec_depend>geometry_msgs</exec_depend>

  <exec_depend condition="$ROS_VERSION == 1">message_runtime</exec_depend>
  <exec_depend condition="$ROS_VERSION == 2">rosidl_default_runtime</exec_depend>
  
  <test_depend condition="$ROS_VERSION == 2">ament_lint_auto</test_depend>
  <test_depend condition="$ROS_VERSION == 2">ament_lint_common</test_depend>

  <member_of_group>rosidl_interface_packages</member_of_group>


  <export>
    <build_type condition="$ROS_VERSION == 1">catkin</build_type>
    <build_type condition="$ROS_VERSION == 2">ament_cmake</build_type>
  </export>

</package>

